# perfectdeal-api

./: .dockerignore  .gitignore  Makefile  docker-compose.yml  readme.md  tree
app/: Dockerfile  Makefile  main.py  pyproject.toml
app/app_graphql/: schema.py
app/app_graphql/mutations/: annonce_mutation.py  mutation.py  research_mutation.py
app/app_graphql/queries/: annonce_query.py  query.py  research_query.py
app/app_graphql/types/: annonce_type.py  research_type.py
app/models/: annonce.py  research.py
app/repositories/: research_repository.py
app/services/db/: memory.py  memory_research.py
app/services/scraping/: scraper_service.py
app/usecases/: research.py
doc/: api.http  tips.md
